Criado através do Colab

--- a/docs/labs/projs/spbp2425_tp1.ipynb
+++ b/docs/labs/projs/spbp2425_tp1.ipynb
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jB8R09NjYJUW",
-        "outputId": "91483a3a-730c-4d91-e102-238ed9281f6c"
+        "outputId": "03f27494-f571-488b-ac15-87822643e9cf"
       },
       "execution_count": 2,
       "outputs": [
@@ -212,28 +212,35 @@
         "    readings = spark.read.csv('energy-readings.csv',\n",
         "                             sep =';', header=True, inferSchema=True)\n",
         "\n",
-        "    # Filtrar apenas para o mês de Fevereiro\n",
-        "    february_data = readings.filter(col(\"date\").substr(6,2) == 2)\n",
-        "    #february_data.show()\n",
+        "    readings.printSchema()\n",
         "\n",
-        "    # Calcular o consumo total de energia para cada sensor e ordenado de forma ascendente\n",
-        "    sensor_total_energy = february_data.groupBy(\"sensor\") \\\n",
-        "    .agg((max(\"energy\") - min(\"energy\")).alias(\"total_energy\")) \\\n",
-        "    .orderBy(\"sensor\", ascending=True)\n",
+        "    #0.Filtra os dados para manter apenas o mês de fevereiro de 2024\n",
+        "    readings_february = readings.filter((month(\"date\") == 2) & (year(\"date\") == 2024))\n",
+        "      #readings_february.show()\n",
         "\n",
-        "    sensor_total_energy.show()\n",
+        "    #1.Total energy consumed in February\n",
+        "    total_energy_consumed = readings_february.groupBy(\"sensor\") \\\n",
+        "      .agg((max(\"energy\")-min(\"energy\")).alias(\"energy_consumed_per_sensor\")) \\\n",
+        "      .agg(sum(\"energy_consumed_per_sensor\").alias(\"total_energy_consumed\"))\n",
+        "      #total_energy_consumed.show()\n",
         "\n",
-        "    #Calcular o Total Acumulado Diário\n",
+        "    #2.Total energy consumed by day in February\n",
+        "    #2.1: Calcula o consumo diário de cada sensor\n",
+        "    daily_consumption_per_sensor = readings_february.withColumn(\"day\", to_date(\"date\")) \\\n",
+        "      .groupBy(\"day\", \"sensor\") \\\n",
+        "      .agg((max(\"energy\") - min(\"energy\")).alias(\"daily_consumption\")) \\\n",
+        "      .orderBy(\"day\", \"sensor\")\n",
+        "    daily_consumption_per_sensor.show()\n",
         "\n",
-        "    daily_max_energy = february_data.withColumn(\"day\", date_trunc(\"day\", \"date\")) \\\n",
-        "    .groupBy(\"sensor\", \"day\") \\\n",
-        "    .agg(max(\"energy\").alias(\"daily_energy\"))\n",
+        "    #2.2: Soma o consumo diário para todos os sensores por dia\n",
+        "    total_daily_consumption = daily_consumption_per_sensor.groupBy(\"day\") \\\n",
+        "      .agg(sum(\"daily_consumption\").alias(\"total_daily_consumption\")) \\\n",
+        "      .orderBy(\"day\")\n",
+        "    total_daily_consumption.show()\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "    #readings.printSchema()\n",
         "    #readings.show(5)\n",
         "except Exception as err:\n",
         "    print(err)"
@@ -243,29 +250,70 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zo41adHJYGs6",
-        "outputId": "5fb110fb-6f2d-4f1a-8a64-61e85757237a"
+        "outputId": "45960d31-f7f6-41db-a9e0-5654ef8f2950"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+------+------------------+\n",
-            "|sensor|      total_energy|\n",
-            "+------+------------------+\n",
-            "|     A|            166.38|\n",
-            "|     B|129.80999999999995|\n",
-            "|     C|            257.22|\n",
-            "|     D| 487.4000000000001|\n",
-            "|     E| 448.7600000000002|\n",
-            "|     F|160.40999999999997|\n",
-            "|     G| 168.4699999999999|\n",
-            "|     H| 479.5999999999999|\n",
-            "|     I|351.40999999999985|\n",
-            "|     J| 230.8499999999999|\n",
-            "|     K|             226.5|\n",
-            "+------+------------------+\n",
+            "root\n",
+            " |-- date: timestamp (nullable = true)\n",
+            " |-- sensor: string (nullable = true)\n",
+            " |-- energy: double (nullable = true)\n",
+            "\n",
+            "+----------+------+------------------+\n",
+            "|       day|sensor| daily_consumption|\n",
+            "+----------+------+------------------+\n",
+            "|2024-02-01|     A| 8.100000000000023|\n",
+            "|2024-02-01|     B|4.2000000000000455|\n",
+            "|2024-02-01|     C| 9.700000000000045|\n",
+            "|2024-02-01|     D|12.900000000000091|\n",
+            "|2024-02-01|     E| 16.09999999999991|\n",
+            "|2024-02-01|     F|              11.0|\n",
+            "|2024-02-01|     G|3.2999999999999545|\n",
+            "|2024-02-01|     H|              23.5|\n",
+            "|2024-02-01|     I|19.899999999999977|\n",
+            "|2024-02-01|     J| 2.599999999999909|\n",
+            "|2024-02-01|     K| 8.399999999999977|\n",
+            "|2024-02-02|     A|4.7999999999999545|\n",
+            "|2024-02-02|     B| 4.599999999999909|\n",
+            "|2024-02-02|     C| 1.599999999999909|\n",
+            "|2024-02-02|     D| 5.900000000000091|\n",
+            "|2024-02-02|     E|10.099999999999909|\n",
+            "|2024-02-02|     F|               6.5|\n",
+            "|2024-02-02|     G| 4.100000000000023|\n",
+            "|2024-02-02|     H| 6.199999999999818|\n",
+            "|2024-02-02|     I|              12.5|\n",
+            "+----------+------+------------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "+----------+-----------------------+\n",
+            "|       day|total_daily_consumption|\n",
+            "+----------+-----------------------+\n",
+            "|2024-02-01|     119.69999999999993|\n",
+            "|2024-02-02|      69.59999999999957|\n",
+            "|2024-02-09|      55.70000000000027|\n",
+            "|2024-02-10|     113.90000000000009|\n",
+            "|2024-02-11|     117.70000000000027|\n",
+            "|2024-02-12|     110.50000000000011|\n",
+            "|2024-02-13|     112.49999999999989|\n",
+            "|2024-02-14|      92.89999999999964|\n",
+            "|2024-02-15|      81.00000000000045|\n",
+            "|2024-02-16|     47.399999999999864|\n",
+            "|2024-02-18|     57.800000000000296|\n",
+            "|2024-02-19|      79.49999999999977|\n",
+            "|2024-02-20|                   84.0|\n",
+            "|2024-02-21|      83.00000000000023|\n",
+            "|2024-02-22|                   76.5|\n",
+            "|2024-02-23|      84.40000000000032|\n",
+            "|2024-02-24|     63.549999999999955|\n",
+            "|2024-02-25|      99.77999999999952|\n",
+            "|2024-02-26|      92.47000000000025|\n",
+            "|2024-02-27|      92.92000000000007|\n",
+            "+----------+-----------------------+\n",
+            "only showing top 20 rows\n",
             "\n"
           ]
         }
