--- a/docs/labs/projs/spbp2425_tp1.ipynb
+++ b/docs/labs/projs/spbp2425_tp1.ipynb
@@ -228,7 +228,7 @@
         "    #2.1: Calcula o consumo diário de cada sensor\n",
         "    daily_consumption_per_sensor = readings_february.withColumn(\"day\", to_date(\"date\")) \\\n",
         "      .groupBy(\"day\", \"sensor\") \\\n",
-        "      .agg((max(\"energy\") - min(\"energy\")).alias(\"daily_consumption\")) \\\n",
+        "      .agg(round((max(\"energy\") - min(\"energy\"))).alias(\"daily_consumption\")) \\\n",
         "      .orderBy(\"day\", \"sensor\")\n",
         "    daily_consumption_per_sensor.show()\n",
         "\n",
@@ -236,8 +236,26 @@
         "    total_daily_consumption = daily_consumption_per_sensor.groupBy(\"day\") \\\n",
         "      .agg(sum(\"daily_consumption\").alias(\"total_daily_consumption\")) \\\n",
         "      .orderBy(\"day\")\n",
-        "    total_daily_consumption.show()\n",
+        "    #total_daily_consumption.show()\n",
         "\n",
+        "    #3.Compute the total energy consumed and the average energy consumption per day\n",
+        "        #Note: utilizou-se a variável de 2.1\n",
+        "        #Note2: a função avg() apenas faz a média com o dias em que houve consumos. é necessário dividir pelos 29 dias\n",
+        "    total_and_average_consumption = daily_consumption_per_sensor.groupBy(\"sensor\") \\\n",
+        "      .agg(round(sum(\"daily_consumption\")).alias(\"total_energy_consumed\"),\n",
+        "         (round(sum(\"daily_consumption\")/lit(29))).alias(\"average_daily_consumption\"))\\\n",
+        "      .orderBy(\"sensor\")\n",
+        "    #total_and_average_consumption.show()\n",
+        "\n",
+        "    #4.Compute the day of the month with minimum and maximum energy consumption\n",
+        "    min_consumption_day = daily_consumption_per_sensor.groupBy(\"sensor\") \\\n",
+        "    .agg(min(\"daily_consumption\").alias(\"min_daily_consumption\"))\n",
+        "    min_consumption_day.show()\n",
+        "    \"\"\"\n",
+        "    min_day = daily_consumption_per_sensor.join(min_consumption_day(daily_consumption_per_sensor[\"sensor\"] == min_consumption_day[\"sensor\"]) &\n",
+        "    (daily_consumption_per_sensor[\"daily_consumption\"] == min_consumption_day[\"min_daily_consumption\"]),\"inner\") \\\n",
+        "    .select(daily_consumption_per_sensor[\"sensor\"], col(\"day\").alias(\"min_consumption_day\"))\n",
+        "     \"\"\"\n",
         "\n",
         "\n",
         "\n",
@@ -250,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zo41adHJYGs6",
-        "outputId": "45960d31-f7f6-41db-a9e0-5654ef8f2950"
+        "outputId": "7691218e-3c28-41d1-8b53-4087f4d260aa"
       },
-      "execution_count": 15,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,61 +281,61 @@
             " |-- sensor: string (nullable = true)\n",
             " |-- energy: double (nullable = true)\n",
             "\n",
-            "+----------+------+------------------+\n",
-            "|       day|sensor| daily_consumption|\n",
-            "+----------+------+------------------+\n",
-            "|2024-02-01|     A| 8.100000000000023|\n",
-            "|2024-02-01|     B|4.2000000000000455|\n",
-            "|2024-02-01|     C| 9.700000000000045|\n",
-            "|2024-02-01|     D|12.900000000000091|\n",
-            "|2024-02-01|     E| 16.09999999999991|\n",
-            "|2024-02-01|     F|              11.0|\n",
-            "|2024-02-01|     G|3.2999999999999545|\n",
-            "|2024-02-01|     H|              23.5|\n",
-            "|2024-02-01|     I|19.899999999999977|\n",
-            "|2024-02-01|     J| 2.599999999999909|\n",
-            "|2024-02-01|     K| 8.399999999999977|\n",
-            "|2024-02-02|     A|4.7999999999999545|\n",
-            "|2024-02-02|     B| 4.599999999999909|\n",
-            "|2024-02-02|     C| 1.599999999999909|\n",
-            "|2024-02-02|     D| 5.900000000000091|\n",
-            "|2024-02-02|     E|10.099999999999909|\n",
-            "|2024-02-02|     F|               6.5|\n",
-            "|2024-02-02|     G| 4.100000000000023|\n",
-            "|2024-02-02|     H| 6.199999999999818|\n",
-            "|2024-02-02|     I|              12.5|\n",
-            "+----------+------+------------------+\n",
+            "+----------+------+-----------------+\n",
+            "|       day|sensor|daily_consumption|\n",
+            "+----------+------+-----------------+\n",
+            "|2024-02-01|     A|              8.0|\n",
+            "|2024-02-01|     B|              4.0|\n",
+            "|2024-02-01|     C|             10.0|\n",
+            "|2024-02-01|     D|             13.0|\n",
+            "|2024-02-01|     E|             16.0|\n",
+            "|2024-02-01|     F|             11.0|\n",
+            "|2024-02-01|     G|              3.0|\n",
+            "|2024-02-01|     H|             24.0|\n",
+            "|2024-02-01|     I|             20.0|\n",
+            "|2024-02-01|     J|              3.0|\n",
+            "|2024-02-01|     K|              8.0|\n",
+            "|2024-02-02|     A|              5.0|\n",
+            "|2024-02-02|     B|              5.0|\n",
+            "|2024-02-02|     C|              2.0|\n",
+            "|2024-02-02|     D|              6.0|\n",
+            "|2024-02-02|     E|             10.0|\n",
+            "|2024-02-02|     F|              7.0|\n",
+            "|2024-02-02|     G|              4.0|\n",
+            "|2024-02-02|     H|              6.0|\n",
+            "|2024-02-02|     I|             13.0|\n",
+            "+----------+------+-----------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "+----------+-----------------------+\n",
-            "|       day|total_daily_consumption|\n",
-            "+----------+-----------------------+\n",
-            "|2024-02-01|     119.69999999999993|\n",
-            "|2024-02-02|      69.59999999999957|\n",
-            "|2024-02-09|      55.70000000000027|\n",
-            "|2024-02-10|     113.90000000000009|\n",
-            "|2024-02-11|     117.70000000000027|\n",
-            "|2024-02-12|     110.50000000000011|\n",
-            "|2024-02-13|     112.49999999999989|\n",
-            "|2024-02-14|      92.89999999999964|\n",
-            "|2024-02-15|      81.00000000000045|\n",
-            "|2024-02-16|     47.399999999999864|\n",
-            "|2024-02-18|     57.800000000000296|\n",
-            "|2024-02-19|      79.49999999999977|\n",
-            "|2024-02-20|                   84.0|\n",
-            "|2024-02-21|      83.00000000000023|\n",
-            "|2024-02-22|                   76.5|\n",
-            "|2024-02-23|      84.40000000000032|\n",
-            "|2024-02-24|     63.549999999999955|\n",
-            "|2024-02-25|      99.77999999999952|\n",
-            "|2024-02-26|      92.47000000000025|\n",
-            "|2024-02-27|      92.92000000000007|\n",
-            "+----------+-----------------------+\n",
-            "only showing top 20 rows\n",
-            "\n"
+            "+------+---------------------+\n",
+            "|sensor|min_daily_consumption|\n",
+            "+------+---------------------+\n",
+            "|     K|                  1.0|\n",
+            "|     F|                  1.0|\n",
+            "|     E|                  5.0|\n",
+            "|     B|                  0.0|\n",
+            "|     D|                  6.0|\n",
+            "|     C|                  2.0|\n",
+            "|     J|                  2.0|\n",
+            "|     A|                  1.0|\n",
+            "|     G|                  1.0|\n",
+            "|     I|                  1.0|\n",
+            "|     H|                  2.0|\n",
+            "+------+---------------------+\n",
+            "\n",
+            "[AMBIGUOUS_REFERENCE] Reference `sensor` is ambiguous, could be: [`sensor`, `sensor`].\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6wBqWg9cgVE7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
