Criado através do Colab

--- a/docs/labs/projs/70705-Q1.ipynb
+++ b/docs/labs/projs/70705-Q1.ipynb
@@ -166,24 +166,11 @@
         "!head -2 energy-readings.csv"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "jB8R09NjYJUW",
-        "outputId": "e87731ab-2772-482a-a7e4-81efa24a4975",
         "cellView": "form"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "date;sensor;energy\n",
-            "2024-02-01 00:00:00;D;2615.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -192,8 +179,7 @@
         "from pyspark.sql.types import *\n",
         "from pyspark.sql.functions import *\n",
         "\n",
-        "spark = SparkSession.builder.master('local[*]') \\\n",
-        "\t\t\t\t\t\t.appName('energy').getOrCreate()\n",
+        "spark = SparkSession.builder.master('local[*]').appName('energy').getOrCreate()\n",
         "\n",
         "sc = spark.sparkContext\n",
         "try :\n",
@@ -253,297 +239,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Question 2** - For the group of sensors, compute the running total energy consumed so far for each day, inclusive"
-      ],
-      "metadata": {
-        "id": "1XA0x4ze_iPr"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "try :\n",
-        "  #2.Total energy consumed by day in February\n",
-        "  #2.1: Calcula o consumo diário de cada sensor\n",
-        "  daily_consumption_per_sensor = readings_february.withColumn(\"day\", to_date(\"date\")) \\\n",
-        "    .groupBy(\"day\", \"sensor\") \\\n",
-        "    .agg(round(max(\"energy\") - min(\"energy\"),3).alias(\"daily_consumption\")) \\\n",
-        "    .orderBy(\"day\", \"sensor\")\n",
-        "  daily_consumption_per_sensor.show()\n",
-        "\n",
-        "  #2.2: Soma o consumo diário para todos os sensores por dia\n",
-        "  total_daily_consumption = daily_consumption_per_sensor.groupBy(\"day\") \\\n",
-        "    .agg(round(sum(\"daily_consumption\"),3).alias(\"total_daily_consumption\")) \\\n",
-        "    .orderBy(\"day\")\n",
-        "  total_daily_consumption.show()\n",
-        "\n",
-        "except Exception as err:\n",
-        "  print(err)"
-      ],
-      "metadata": {
-        "id": "t8_VnTCZ_hgm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Question 3** - For each sensor separately, compute the total energy consumed and the average energy consumption per day."
-      ],
-      "metadata": {
-        "id": "LwzXwW4fAe5-"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#3.Compute the total energy consumed and the average energy consumption per day\n",
-        "        #Note: utilizou-se a variável de 2.1\n",
-        "        #Note2: a função avg() apenas faz a média com o dias em que houve consumos. é necessário dividir pelos 29 dias\n",
-        "try :\n",
-        "  total_and_average_consumption = daily_consumption_per_sensor.groupBy(\"sensor\") \\\n",
-        "        .agg(round(sum(\"daily_consumption\"),3).alias(\"total_energy_consumed\"),\n",
-        "          (round(sum(\"daily_consumption\")/lit(29),3)).alias(\"average_daily_consumption\"))\\\n",
-        "        .orderBy(\"sensor\")\n",
-        "\n",
-        "  total_and_average_consumption.show()\n",
-        "\n",
-        "except Exception as err:\n",
-        "  print(err)"
-      ],
-      "metadata": {
-        "id": "6wBqWg9cgVE7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Question 4** - For each sensor separately, compute the day of the month with minimum and maximum energy consumption."
-      ],
-      "metadata": {
-        "id": "VKU6Z3tgBxpA"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 4.1 Calcula o valor mínimo e máximo de consumo diário para cada sensor\n",
-        "min_consumption_day = daily_consumption_per_sensor.groupBy(\"sensor\") \\\n",
-        "    .agg(min(\"daily_consumption\").alias(\"min_daily_consumption\"))\n",
-        "\n",
-        "max_consumption_day = daily_consumption_per_sensor.groupBy(\"sensor\") \\\n",
-        "    .agg(max(\"daily_consumption\").alias(\"max_daily_consumption\"))\n",
-        "\n",
-        "max_consumption_day.show()\n",
-        "\n",
-        "# 4.3 Filtra para encontrar o dia onde o consumo foi mínimo\n",
-        "# Adiciona aliases para resolver a ambiguidade\n",
-        "min_day = daily_consumption_per_sensor.alias(\"dcps\").join(\n",
-        "    min_consumption_day.alias(\"min_day\"),\n",
-        "    (col(\"dcps.sensor\") == col(\"min_day.sensor\")) &\n",
-        "    (col(\"dcps.daily_consumption\") == col(\"min_day.min_daily_consumption\")),\"inner\"\n",
-        ").select(\n",
-        "    col(\"dcps.sensor\"),\n",
-        "    col(\"dcps.day\").alias(\"min_consumption_day\"),\n",
-        "    col(\"dcps.daily_consumption\").alias(\"min_daily_consumption\")\n",
-        ").orderBy(\"sensor\")\n",
-        "\n",
-        "# 4.4 Filtra para encontrar o dia onde o consumo foi máximo\n",
-        "max_day = daily_consumption_per_sensor.alias(\"dcps\").join(\n",
-        "    max_consumption_day.alias(\"max_day\"),\n",
-        "    (col(\"dcps.sensor\") == col(\"max_day.sensor\")) &\n",
-        "    (col(\"dcps.daily_consumption\") == col(\"max_day.max_daily_consumption\")),\"inner\"\n",
-        ").select(\n",
-        "    col(\"dcps.sensor\"),\n",
-        "    col(\"dcps.day\").alias(\"max_consumption_day\"),\n",
-        "    col(\"dcps.daily_consumption\").alias(\"max_daily_consumption\")\n",
-        ").orderBy(\"sensor\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "# 4.5 Exibe os resultados\n",
-        "min_day.show()\n",
-        "max_day.show()"
-      ],
-      "metadata": {
-        "id": "jCwo_JnZB_Du"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Question 5** - Compute the estimated value of each sensor meter for day of the month (in ascending order)."
-      ],
-      "metadata": {
-        "id": "A5pre2dzMW6q"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from pyspark.sql import functions as F\n",
-        "from pyspark.sql.window import Window\n",
-        "from datetime import datetime, timedelta\n",
-        "\n",
-        "# 5.0 Função de Interpolação Linear - Adaptada de StackOverflow \"Pyspark : Interpolation of missing values in pyspark dataframe observed\"\n",
-        "    #Link: https://stackoverflow.com/questions/53077639/pyspark-interpolation-of-missing-values-in-pyspark-dataframe-observed\n",
-        "def fill_linear_interpolation(df, id_cols, order_col, value_col):\n",
-        "    w = Window.partitionBy(id_cols).orderBy(order_col)\n",
-        "    new_df = df.withColumn('rn', F.row_number().over(w))\n",
-        "    new_df = new_df.withColumn('rn_not_null', F.when(F.col(value_col).isNotNull(), F.col('rn')))\n",
-        "\n",
-        "    w_start = Window.partitionBy(id_cols).orderBy(order_col).rowsBetween(Window.unboundedPreceding, -1)\n",
-        "    new_df = new_df.withColumn('start_val', F.last(value_col, True).over(w_start))\n",
-        "    new_df = new_df.withColumn('start_rn', F.last('rn_not_null', True).over(w_start))\n",
-        "\n",
-        "    w_end = Window.partitionBy(id_cols).orderBy(order_col).rowsBetween(0, Window.unboundedFollowing)\n",
-        "    new_df = new_df.withColumn('end_val', F.first(value_col, True).over(w_end))\n",
-        "    new_df = new_df.withColumn('end_rn', F.first('rn_not_null', True).over(w_end))\n",
-        "\n",
-        "    if not isinstance(id_cols, list):\n",
-        "        id_cols = [id_cols]\n",
-        "\n",
-        "    new_df = new_df.withColumn('diff_rn', F.col('end_rn') - F.col('start_rn'))\n",
-        "    new_df = new_df.withColumn('curr_rn', F.col('diff_rn') - (F.col('end_rn') - F.col('rn')))\n",
-        "\n",
-        "    lin_interp_func = (F.col('start_val') + (F.col('end_val') - F.col('start_val')) / F.col('diff_rn') * F.col('curr_rn'))\n",
-        "    new_df = new_df.withColumn(value_col, F.when(F.col(value_col).isNull(), lin_interp_func).otherwise(F.col(value_col)))\n",
-        "\n",
-        "    return new_df.drop('rn', 'rn_not_null', 'start_val', 'end_val', 'start_rn', 'end_rn', 'diff_rn', 'curr_rn')\n",
-        "\n",
-        "# 5.1. Cria uma série de datas para todo o mês de fevereiro de 2024\n",
-        "date_range_df = spark.createDataFrame([(datetime(2024, 2, 1), datetime(2024, 2, 29))], [\"start_date\", \"end_date\"])\n",
-        "date_df = date_range_df.select(explode(sequence(\"start_date\", \"end_date\")).alias(\"day\"))\n",
-        "date_df = date_df.withColumn(\"day\", to_date(\"day\"))\n",
-        "\n",
-        "# 5.2. Obter a leitura máxima diária para cada sensor\n",
-        "readings_february = readings_february.withColumn(\"day\", to_date(\"date\"))\n",
-        "max_daily_readings = readings_february \\\n",
-        "    .groupBy(\"sensor\", \"day\") \\\n",
-        "    .agg(max(\"energy\").alias(\"max_energy\")) \\\n",
-        "    .orderBy(\"sensor\", \"day\")\n",
-        "\n",
-        "# 5.3. Realizar um join para garantir que todos os dias de fevereiro estão presentes para cada sensor\n",
-        "sensors_df = max_daily_readings.select(\"sensor\").distinct()\n",
-        "all_dates_for_sensors = sensors_df.crossJoin(date_df)\n",
-        "\n",
-        "# 5.4 Left join para completar com dados reais onde disponíveis e null onde não há contagens\n",
-        "complete_daily_data = all_dates_for_sensors.join(\n",
-        "    max_daily_readings,\n",
-        "    on=[\"day\", \"sensor\"],\n",
-        "    how=\"left\"\n",
-        ").orderBy(\"day\", \"sensor\")\n",
-        "\n",
-        "# 5.5. Aplicar a função de interpolação linear\n",
-        "interpolated_daily_data = fill_linear_interpolation(complete_daily_data, id_cols=\"sensor\", order_col=\"day\", value_col=\"max_energy\")\n",
-        "\n",
-        "# 5.6. Aplicar a função de interpolação linear\n",
-        "interpolated_daily_data = interpolated_daily_data.withColumn(\"max_energy\", round(\"max_energy\",3))\n",
-        "\n",
-        "# 5.6. Exibir o resultado final com os valores interpolados\n",
-        "interpolated_daily_data.show()"
-      ],
-      "metadata": {
-        "id": "GavR91du468j"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Question 6** - For each sensor, separately, with estimations compute the estimated running total of the energy consumed so far. The value should be updated every hour."
-      ],
-      "metadata": {
-        "id": "AmUjHREKSNF5"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from pyspark.sql import functions as F\n",
-        "from datetime import datetime\n",
-        "\n",
-        "\n",
-        "# 1. Filtrar apenas os dados do mês de fevereiro de 2024\n",
-        "readings_february = readings.filter((F.month(\"date\") == 2) & (F.year(\"date\") == 2024)).orderBy(\"sensor\", \"date\")\n",
-        "\n",
-        "# 2. Reduzir a precisão de `date` para a hora (YYYY-MM-DD HH:00:00), para agrupar por sensor e hora\n",
-        "readings_february = readings_february.withColumn(\"hour\", F.date_trunc(\"hour\", \"date\")).orderBy(\"sensor\", \"hour\")\n",
-        "\n",
-        "# 3. Para cada sensor e cada hora, obter o valor máximo de energia, descartando múltiplas contagens na mesma hora\n",
-        "max_hourly_readings = readings_february.groupBy(\"sensor\", \"hour\").agg(F.max(\"energy\").alias(\"energy\"))\n",
-        "\n",
-        "# 4. Criar uma sequência de timestamps para cada hora no mês de fevereiro de 2024\n",
-        "start_timestamp = datetime(2024, 2, 1, 0, 0, 0)\n",
-        "end_timestamp = datetime(2024, 2, 29, 23, 0, 0)\n",
-        "\n",
-        "# Gera uma sequência de timestamps a cada hora\n",
-        "timestamp_df = spark.createDataFrame([(start_timestamp, end_timestamp)], [\"start_timestamp\", \"end_timestamp\"]) \\\n",
-        "    .select(F.explode(F.sequence(\"start_timestamp\", \"end_timestamp\", F.expr(\"INTERVAL 1 HOUR\"))).alias(\"timestamp\"))\n",
-        "\n",
-        "# 5. Fazer um cross join entre os sensores e os timestamps de fevereiro para garantir uma série completa\n",
-        "sensors_df = max_hourly_readings.select(\"sensor\").distinct()\n",
-        "all_timestamps_for_sensors = sensors_df.crossJoin(timestamp_df)\n",
-        "\n",
-        "# 6. Realizar o left join para preencher com dados reais onde disponíveis e `null` onde faltam contagens\n",
-        "complete_hourly_data = all_timestamps_for_sensors.join(\n",
-        "    max_hourly_readings,\n",
-        "    on=(all_timestamps_for_sensors[\"sensor\"] == max_hourly_readings[\"sensor\"]) &\n",
-        "       (all_timestamps_for_sensors[\"timestamp\"] == max_hourly_readings[\"hour\"]),\n",
-        "    how=\"left\"\n",
-        ")\n",
-        "\n",
-        "# 7. Selecionar as colunas finais e renomear para remover ambiguidades\n",
-        "complete_hourly_data = complete_hourly_data.select(\n",
-        "    all_timestamps_for_sensors[\"sensor\"],\n",
-        "    all_timestamps_for_sensors[\"timestamp\"],\n",
-        "    max_hourly_readings[\"energy\"]\n",
-        ").orderBy(\"sensor\", \"timestamp\")\n",
-        "\n",
-        "\n",
-        "# Exibir o resultado final para confirmação\n",
-        "#complete_hourly_data.show(50)\n",
-        "\n",
-        "interpolated_hourly_data = fill_linear_interpolation(complete_hourly_data, id_cols=\"sensor\", order_col=\"timestamp\", value_col=\"energy\")\n",
-        "\n",
-        "readings_february_interpolated = interpolated_hourly_data.filter((F.month(\"timestamp\") == 2) & (F.year(\"timestamp\") == 2024))\n",
-        "\n",
-        "\n",
-        "consumption_february = readings_february_interpolated.groupBy(\"sensor\").agg(\n",
-        "    F.first(\"energy\").alias(\"start_energy\"),\n",
-        "    F.last(\"energy\").alias(\"end_energy\")\n",
-        ")\n",
-        "\n",
-        "consumption_february = consumption_february.withColumn(\"total_consumption\", round(F.col(\"end_energy\") - F.col(\"start_energy\"),3))\n",
-        "\n",
-        "result = consumption_february.select(\"sensor\", \"total_consumption\").orderBy(\"sensor\")\n",
-        "\n",
-        "result.show()"
-      ],
-      "metadata": {
-        "id": "JDKUpG5PkunR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "g6PIzNBdgqDP"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
