Criado através do Colab

--- a/docs/labs/projs/spbp2425_tp1_final.ipynb
+++ b/docs/labs/projs/spbp2425_tp1_final.ipynb
@@ -185,7 +185,7 @@
         "id": "jB8R09NjYJUW",
         "outputId": "c43e5d06-376b-4af3-c92b-7f3c5e5be38a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,80 +208,21 @@
         "\t\t\t\t\t\t.appName('energy').getOrCreate()\n",
         "\n",
         "sc = spark.sparkContext\n",
+        "\n",
         "try :\n",
-        "    readings = spark.read.csv('energy-readings.csv',\n",
-        "                             sep =';', header=True, inferSchema=True)\n",
+        "    readings = spark.read.csv('energy-readings.csv', sep =';', header=True, inferSchema=True)\n",
         "\n",
-        "    readings.printSchema()\n",
+        "    #0.Filtra os dados para manter apenas o mês de fevereiro de 2024\n",
+        "    readings_february = readings.filter((month(\"date\") == 2) & (year(\"date\") == 2024))\n",
         "\n",
-        "\n",
-        "    #readings.show(5)\n",
         "except Exception as err:\n",
         "    print(err)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zo41adHJYGs6",
-        "outputId": "c249fc39-03c0-4480-a262-d6e8c5a5b5b9"
+        "id": "zo41adHJYGs6"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "root\n",
-            " |-- date: timestamp (nullable = true)\n",
-            " |-- sensor: string (nullable = true)\n",
-            " |-- energy: double (nullable = true)\n",
-            "\n",
-            "+----------+------+-----------------+\n",
-            "|       day|sensor|daily_consumption|\n",
-            "+----------+------+-----------------+\n",
-            "|2024-02-01|     A|              8.0|\n",
-            "|2024-02-01|     B|              4.0|\n",
-            "|2024-02-01|     C|             10.0|\n",
-            "|2024-02-01|     D|             13.0|\n",
-            "|2024-02-01|     E|             16.0|\n",
-            "|2024-02-01|     F|             11.0|\n",
-            "|2024-02-01|     G|              3.0|\n",
-            "|2024-02-01|     H|             24.0|\n",
-            "|2024-02-01|     I|             20.0|\n",
-            "|2024-02-01|     J|              3.0|\n",
-            "|2024-02-01|     K|              8.0|\n",
-            "|2024-02-02|     A|              5.0|\n",
-            "|2024-02-02|     B|              5.0|\n",
-            "|2024-02-02|     C|              2.0|\n",
-            "|2024-02-02|     D|              6.0|\n",
-            "|2024-02-02|     E|             10.0|\n",
-            "|2024-02-02|     F|              7.0|\n",
-            "|2024-02-02|     G|              4.0|\n",
-            "|2024-02-02|     H|              6.0|\n",
-            "|2024-02-02|     I|             13.0|\n",
-            "+----------+------+-----------------+\n",
-            "only showing top 20 rows\n",
-            "\n",
-            "+------+---------------------+\n",
-            "|sensor|min_daily_consumption|\n",
-            "+------+---------------------+\n",
-            "|     K|                  1.0|\n",
-            "|     F|                  1.0|\n",
-            "|     E|                  5.0|\n",
-            "|     B|                  0.0|\n",
-            "|     D|                  6.0|\n",
-            "|     C|                  2.0|\n",
-            "|     J|                  2.0|\n",
-            "|     A|                  1.0|\n",
-            "|     G|                  1.0|\n",
-            "|     I|                  1.0|\n",
-            "|     H|                  2.0|\n",
-            "+------+---------------------+\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -307,9 +248,7 @@
         "    readings = spark.read.csv('energy-readings.csv',\n",
         "                             sep =';', header=True, inferSchema=True)\n",
         "\n",
-        "    #0.Filtra os dados para manter apenas o mês de fevereiro de 2024\n",
-        "    readings_february = readings.filter((month(\"date\") == 2) & (year(\"date\") == 2024))\n",
-        "      #readings_february.show()\n",
+        "\n",
         "\n",
         "    #1.Total energy consumed in February\n",
         "    total_energy_consumed = readings_february.groupBy(\"sensor\") \\\n",
@@ -328,7 +267,7 @@
         "id": "6mkQZ8uz7etV",
         "outputId": "b0f0978b-5985-4cf1-bd90-826f77c4102a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +320,7 @@
         "id": "t8_VnTCZ_hgm",
         "outputId": "25959e78-0945-4c3f-dbe4-5e13e03c6bdc"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -476,7 +415,7 @@
         },
         "outputId": "bb529986-2251-4083-f66b-06eebc49e780"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +498,7 @@
         "id": "jCwo_JnZB_Du",
         "outputId": "31ea1482-dcf3-4f47-b026-21ee06c454bf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +716,7 @@
         "id": "JDKUpG5PkunR",
         "outputId": "79ad3c22-9cfb-4f72-845f-ed75b8482f89"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
